--- a/index.html
+++ b/index.html
@@ -288,6 +288,31 @@
       margin-right: auto;
       box-sizing: border-box;
     }
+    .corner-light {
+      position: absolute;
+      width: 20px;
+      height: 20px;
+      border-radius: 50%;
+      background-color: yellow;
+      box-shadow: 0 0 10px yellow;
+      display: none;
+    }
+    .corner-light.top-left {
+      top: 10px;
+      left: 10px;
+    }
+    .corner-light.top-right {
+      top: 10px;
+      right: 10px;
+    }
+    .corner-light.bottom-left {
+      bottom: 10px;
+      left: 10px;
+    }
+    .corner-light.bottom-right {
+      bottom: 10px;
+      right: 10px;
+    }
     /* Responsive design for tablets and phones */
     @media (max-width: 768px) {
       .moving-animal {
@@ -697,7 +722,7 @@
     <h1>🌴 Sensory Safari 🌴</h1>
     <div class="form-group">
       <label for="numTries">Number of Tries:</label>
-      <input type="range" id="numTries" min="1" max="10" value="5" />
+      <input type="range" id="numTries" min="1" max="25" value="5" />
       <span id="numTriesValue">5</span>
     </div>
     <div class="form-group">
@@ -718,9 +743,9 @@
           <img src="Images/Cat/cat.jpeg" alt="Cat" id="catImg" onmouseover="this.src='Images/Cat/cat.jpeg'" onmouseout="this.src='Images/Cat/cat.jpeg'" />
           <div>Cat</div>
         </div>
-        <div class="animal-option" data-animal="owl">
-          <img src="Images/Owl/owl_on_branch.jpeg" alt="Owl" id="owlImg" onmouseover="this.src='Images/Owl/owl_on_branch.jpeg'" onmouseout="this.src='Images/Owl/owl_on_branch.jpeg'" />
-          <div>Owl</div>
+        <div class="animal-option" data-animal="elephant">
+          <img src="Images/Owl/owl_on_branch.jpeg" alt="Elephant" id="elephantImg" onmouseover="this.src='Images/Owl/owl_on_branch.jpeg'" onmouseout="this.src='Images/Owl/owl_on_branch.jpeg'" />
+          <div>Elephant</div>
         </div>
         <div class="animal-option" data-animal="monkey">
           <img src="Images/Monkey/monkey_before_swing.jpeg" alt="Monkey" id="monkeyImg" onmouseover="this.src='Images/Monkey/monkey_before_swing.jpeg'" onmouseout="this.src='Images/Monkey/monkey_before_swing.jpeg'" />
@@ -1356,7 +1381,7 @@
       const animalImageMap = {
         turtle: `${basePath}/Turtle/turtle.jpeg`,
         cat: `${basePath}/Cat/cat.jpeg`,
-        owl: `${basePath}/Owl/owl_on_branch.jpeg`,
+        elephant: `${basePath}/Owl/owl_on_branch.jpeg`,
         monkey: `${basePath}/Monkey/monkey_before_swing.jpeg`
       };
 
@@ -1399,6 +1424,45 @@
 
       // --- Always activate distractors at trial start ---
       const lightsEnabled = document.getElementById('lightsToggleBtn').classList.contains('active');
+      if (lightsEnabled) {
+        // Add light bulbs to the corners
+        const corners = ['top-left', 'top-right', 'bottom-left', 'bottom-right'];
+        corners.forEach(corner => {
+          const light = document.createElement('div');
+          light.className = `corner-light ${corner}`;
+          waveContainer.appendChild(light);
+        });
+
+        // Alternate colors for lights
+        const colors = ['blue', 'yellow', 'green', 'red'];
+        let colorIndex = 0;
+        const lightDuration = stimDuration * 0.6;
+
+        const colorInterval = setInterval(() => {
+          document.querySelectorAll('.corner-light').forEach(el => {
+            el.style.backgroundColor = colors[colorIndex];
+            el.style.boxShadow = `0 0 10px ${colors[colorIndex]}`;
+          });
+          colorIndex = (colorIndex + 1) % colors.length;
+        }, 500); // Change color every 500ms
+
+        // Show lights for 60% of the stimulus duration
+        document.querySelectorAll('.corner-light').forEach(el => el.style.display = 'block');
+        setTimeout(() => {
+          document.querySelectorAll('.corner-light').forEach(el => el.style.display = 'none');
+          clearInterval(colorInterval); // Stop alternating colors
+        }, lightDuration);
+
+        const waveParent = document.getElementById('wave-container').parentNode;
+        if (waveParent) {
+          currentBackgroundIndex = 0;
+          if (backgroundCycleInterval) clearInterval(backgroundCycleInterval);
+          backgroundCycleInterval = setInterval(() => {
+            waveParent.style.backgroundImage = `url('${backgroundImages[currentBackgroundIndex]}')`;
+            currentBackgroundIndex = (currentBackgroundIndex + 1) % backgroundImages.length;
+          }, 600);
+        }
+      }
       if (selections.soundOn) {
         beepAudio.load(); // Ensure sound is reloaded on first task
         const stimDuration = selections.stimDuration * 1000;
@@ -1420,17 +1484,6 @@
             elapsed += repeatInterval;
           }, repeatInterval);
         }, soundStartDelay);
-      }
-      if (lightsEnabled) {
-        const waveParent = document.getElementById('wave-container').parentNode;
-        if (waveParent) {
-          currentBackgroundIndex = 0;
-          if (backgroundCycleInterval) clearInterval(backgroundCycleInterval);
-          backgroundCycleInterval = setInterval(() => {
-            waveParent.style.backgroundImage = `url('${backgroundImages[currentBackgroundIndex]}')`;
-            currentBackgroundIndex = (currentBackgroundIndex + 1) % backgroundImages.length;
-          }, 600);
-        }
       }
       // Stop distractors after 60% of the stimulus period
       setTimeout(() => {
@@ -1866,12 +1919,13 @@
     function toggleLights() {
       const btn = document.getElementById('lightsToggleBtn');
       btn.classList.toggle('active');
+      const bulbs = document.querySelectorAll('.corner-light');
       if (btn.classList.contains('active')) {
         btn.textContent = 'Lights On';
-        // Do not start blinking here; blinking is handled at trial start.
+        bulbs.forEach(bulb => bulb.style.display = 'block');
       } else {
         btn.textContent = 'Lights Off?';
-        // If blinking is active, stop immediately and reset to static background image
+        bulbs.forEach(bulb => bulb.style.display = 'none');
         if (backgroundCycleInterval !== null) {
           clearInterval(backgroundCycleInterval);
           backgroundCycleInterval = null;
@@ -1881,7 +1935,6 @@
             waveContainer.style.backgroundImage = "url('Images/Background.jpeg')";
           }
         }
-        // Optionally reset body background if you want, but not needed for #wave-container logic
       }
     }
 
